# data_ingestion_project

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
dbt/: .user.yml  Dockerfile  dbt_project.yml  profiles.yml
dbt/models/: VW_EPISODES.sql  VW_GENERAL.sql  basic_info.sql  source.yml
notebooks/: test.ipynb
postgres/: init.sql
src/: extract.py  load.py  transform.py
